--- a/asp_module/asp_module.html
+++ b/asp_module/asp_module.html
@@ -10,6 +10,7 @@
 
 </head>
 <body class="container my-4">
+  
 
   <!-- Ustaw dzień osi czasu (domyślnie: dziś 06:00) -->
   <div class="row gy-2 gx-3 align-items-end mb-3">
@@ -28,6 +29,14 @@
         Import planu <input id="importPlanInput" type="file" accept="application/json" hidden>
       </label>
     </div>
+  </div>
+  
+<div class="d-flex align-items-center gap-2">
+    <label for="gridStepSelect" class="form-label mb-0">Podziałka:</label>
+    <select id="gridStepSelect" class="form-select form-select-sm" style="width: 140px;">
+      <option value="1" selected>co 1 min</option>
+      <option value="60">co 1 godz</option>
+    </select>
   </div>
 
   <button class="btn btn-success me-2" data-bs-toggle="modal" data-bs-target="#addMachineModal">
@@ -163,6 +172,6 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
